Use virtual Threads (#55)